--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 dependencies:
-- role: andrewrothstein.bash
-  version: v1.1.4
+#- role: andrewrothstein.bash
+#  version: v1.1.4
 - role: andrewrothstein.unarchive-deps
   version: v1.1.2
 - openjdk_app: jdk
